--- a/submodule/lidar-sdk/CMakeLists.txt
+++ b/submodule/lidar-sdk/CMakeLists.txt
@@ -5,21 +5,13 @@ set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_CXX_STANDARD 11)
 
 FILE(GLOB RPLIDAR_SDK_SRC 
-  ${CMAKE_SOURCE_DIR}/sdk/src/arch/linux/*.cpp
-  ${CMAKE_SOURCE_DIR}/sdk/src/hal/*.cpp
-  ${CMAKE_SOURCE_DIR}/sdk/src/*.cpp
-)
-
-find_package(catkin REQUIRED COMPONENTS
-  roscpp 
-  rosconsole
-  sensor_msgs
+  sdk/src/arch/linux/*.cpp
+  sdk/src/hal/*.cpp
+  sdk/src/*.cpp
 )
 
 add_library(bigbang_rplidar_sdk STATIC ${RPLIDAR_SDK_SRC})
-target_link_libraries(bigbang_rplidar_sdk PRIVATE ${catkin_LIBRARIES})
 target_include_directories(bigbang_rplidar_sdk PUBLIC
-  ${CMAKE_SOURCE_DIR}/sdk/include
-  ${CMAKE_SOURCE_DIR}/sdk/src
-  ${catkin_INCLUDE_DIRS}
+  sdk/include
+  sdk/src
 )
