--- a/submodule/lidar-sdk/CMakeLists.txt
+++ b/submodule/lidar-sdk/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(bigbang_rplidar_sdk)
+project(bigbang-rplidar-sdk)
 
 set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_CXX_STANDARD 11)
@@ -10,8 +10,8 @@ FILE(GLOB RPLIDAR_SDK_SRC
   sdk/src/*.cpp
 )
 
-add_library(bigbang_rplidar_sdk STATIC ${RPLIDAR_SDK_SRC})
-target_include_directories(bigbang_rplidar_sdk PUBLIC
+add_library(bigbang-rplidar-sdk STATIC ${RPLIDAR_SDK_SRC})
+target_include_directories(bigbang-rplidar-sdk PUBLIC
   sdk/include
   sdk/src
 )
